tests/rosetta/transpiler/Kotlin/anagrams.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/rosetta/transpiler/Kotlin/anagrams.kt:68:92: error: unexpected tokens (use ';' to separate expressions on the same line)
            (groups)[k] = run { val _tmp = (groups)[k] as MutableList<String>.toMutableList(); _tmp.add(w); _tmp }
                                                                                           ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/anagrams.kt:68:94: error: expecting an element
            (groups)[k] = run { val _tmp = (groups)[k] as MutableList<String>.toMutableList(); _tmp.add(w); _tmp }
                                                                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/anagrams.kt:68:79: error: unresolved reference: toMutableList
            (groups)[k] = run { val _tmp = (groups)[k] as MutableList<String>.toMutableList(); _tmp.add(w); _tmp }
                                                                              ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/anagrams.kt:70:48: error: unresolved reference: size
        if ((groups)[k] as MutableList<String>.size > maxLen) {
                                               ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/anagrams.kt:71:57: error: unresolved reference: size
            maxLen = (groups)[k] as MutableList<String>.size
                                                        ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/anagrams.kt:77:48: error: unresolved reference: size
        if ((groups)[k] as MutableList<String>.size == maxLen) {
                                               ^
